--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     <input type="number" id="squareSide">
 </div>
 <div class="buttons">
-    <button id="">Hitung</button>
+    <button id="countButton">Hitung</button>
     <button id="resetButton">Reset</button>
 </div>
-
 </body>
 </html>
