--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 <body>
     <header>
         <h1>Kalkulator Luas dan Keliling Persegi</h1>
-        <h4>Welcome to Kalkulator Luas dan Keliling Persegi</h4>
-        <p>Web ini digunakan untuk menghitung Luas dan Keliling Persegi dalam rangka menyelesaikan mini project Revou</p>
-    
+        <h4>Welcome to Kalkulator Luas dan Keliling Persegi <br>Web ini digunakan untuk menghitung Luas dan Keliling Persegi dalam rangka menyelesaikan mini project Revou</h4>
+        <p>Luas Persegi</p>
+        <img src="Kotak.png" alt="Persegi">
+        <p>Rumus Luas Persegi adalah:</p>
+        <h5>L = S x S</h5>
+        <p>Di Mana:<br>L=Luas<br>S=Sisi</p>
+        <hr>
+        <h1>Hitung Luas Persegi</h1>
     </header>
     <form id="calculator-form">
         <input type="number" id="sisi" placeholder="Nilai Sisi" required>
@@ -19,6 +24,6 @@
         <button type="reset">Reset</button>
     </form>
     <h3 id="luas-persegi"></h3>
-    <script src="scripts.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
