--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button type="submit">Hitung</button>
         <button type="reset">Reset</button>
         </form>
-        <h3>Keliling Persegi</h3>
+        <h3>Keliling Persegi.</h3>
         <h3 id="keliling"></h3>
     <script src="js/script.js"></script>
     </main>
