--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">\
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
             </div>
         </section>
         <p>Luas Persegi</p>
-        <img src="assets/Kotak.png" alt="Persegi">
+        <img src="Kotak.png" alt="Persegi">
         <p>Rumus Luas Persegi adalah:</p>
         <h5>L = S x S</h5>
         <p>Di Mana:<br>L=Luas<br>S=Sisi</p>
@@ -32,7 +32,7 @@
     <script src="js/script.js"></script>
     <hr>
     <p>Keliling Persegi</p>
-    <img src="assets/Kotak.png" alt="Persegi">
+    <img src="Kotak.png" alt="Persegi">
     <p>Rumus Keliling Persegi</p>
     <h5>K = 4 x S</h5>
     <p>Di Mana:<br>K=Keliling<br>S=Sisi</p>
