last and final push

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </section>
         <p>Luas Persegi</p>
-        <img src="Kotak.png" alt="Persegi">
+        <img src="Kotak.png" alt="Persegi" class="center">
         <p>Rumus Luas Persegi adalah:</p>
         <h5>L = S x S</h5>
         <p>Di Mana:<br>L=Luas<br>S=Sisi</p>
@@ -32,7 +32,7 @@
     <script src="js/script.js"></script>
     <hr>
     <p>Keliling Persegi</p>
-    <img src="Kotak.png" alt="Persegi">
+    <img src="Kotak.png" alt="Persegi" class="center">
     <p>Rumus Keliling Persegi</p>
     <h5>K = 4 x S</h5>
     <p>Di Mana:<br>K=Keliling<br>S=Sisi</p>
